--- a/polls/templates/polls/pirvate_poll.html
+++ b/polls/templates/polls/pirvate_poll.html
@@ -7,6 +7,7 @@
 </style>
 
 {% if latest_question_list %}
+<h2>Pivate Questions</h2>
     <ul>
     {% for question in latest_question_list %}
     <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
