--- a/polls/templates/polls/pirvate_results.html
+++ b/polls/templates/polls/pirvate_results.html
@@ -1,7 +1,7 @@
 <h1>{{ question.question_text }}</h1>
 
 <ul>
-{% for choice in question.choice_set.all %}
+{% for choice in question.pirvate_choice_set.all %}
     <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
 {% endfor %}
 </ul>
@@ -9,4 +9,4 @@
 VOTE = 0
 VOTE +=1
 </script>
-<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+<a href="{% url 'polls:pivatedetail' question.id %}">Vote again?</a>
